--- a/css/style.css
+++ b/css/style.css
@@ -321,7 +321,7 @@ body.main .h2-wrap h2{opacity: 1; transform: translate3d(0,0,0)}
 .no-transitions h2{transition: none!important}
 .dog-item-outher {position: relative;}
 .dog-item-outher .header{transform: translate3d(0,-100%,0) scale(1,0);opacity: 0;transition: all ease-in-out 1s;position: absolute;top: 0;}
-.dog-item-outher .img-main{width: 100%; transform: scale(0.45) translate(-20%,0%);transform-origin: 50% 0%;transition: all ease-in-out 1s;max-width: 2560px;position: relative;height: 0;overflow: hidden;padding-bottom: 58.2%;}
+.dog-item-outher .img-main{width: 100%; transform: scale(0.45) translate3d(-20%,0%,0);transform-origin: 50% 0%;transition: all ease-in-out 1s;max-width: 2560px;position: relative;height: 0;overflow: hidden;padding-bottom: 58.2%;}
 .dog-item-outher .img-main img{width: 100%;cursor: pointer;}
 .dog-item-outher h2{color: #ffffff; font-size: 2.868vw; line-height: 1.03em;  text-transform: uppercase;letter-spacing: 0.02em;cursor: pointer;transition: all ease-in-out 0.5s;font-family: 'DrukTextWideCyr-Medium';text-shadow: -0 -1.2285px 0 rgb(151,151,151,1),0 -1.2285px 0 rgb(151,151,151,1),-0 1.2285px 0 rgb(151,151,151,1),0 1.2285px 0 rgb(151,151,151,1),-1.2285px -0 0 rgb(151,151,151,1),1.2285px -0 0 rgb(151,151,151,1),-1.2285px 0 0 rgb(151,151,151,1),1.2285px 0 0 rgb(151,151,151,1),-0.61425px -1.2285px 0 rgb(151,151,151,1),0.61425px -1.2285px 0 rgb(151,151,151,1),-0.61425px 1.2285px 0 rgb(151,151,151,1),0.61425px 1.2285px 0 rgb(151,151,151,1),-1.2285px -0.61425px 0 rgb(151,151,151,1),1.2285px -0.61425px 0 rgb(151,151,151,1),-1.2285px 0.61425px 0 rgb(151,151,151,1),1.2285px 0.61425px 0 rgb(151,151,151,1),-1.2285px -1.2285px 0 rgb(151,151,151,1),1.2285px -1.2285px 0 rgb(151,151,151,1),-1.2285px 1.2285px 0 rgb(151,151,151,1),1.2285px 1.2285px 0 rgb(151,151,151,1),-1.2285px -1.2285px 0 rgb(151,151,151,1),1.2285px -1.2285px 0 rgb(151,151,151,1),-1.2285px 1.2285px 0 rgb(151,151,151,1),1.2285px 1.2285px 0 rgb(151,151,151,1);}
 .dog-item-outher .h2-wrap {overflow: hidden;position: absolute;z-index: 3;top: 15%;left: 50%;width: 35%;}
@@ -656,7 +656,7 @@ blockquote.gray:before{top:-24px;}
     #section-1 > div{margin-top: -8vh;}
     #section-2 p {max-width: 697px;font-size: 23px;line-height: 32px;letter-spacing: 0.03em;text-align: left;margin-bottom: 36px;}
     .btn-down {width: 50px;height: 50px;background-size: 23px 23px;margin-top: 74px;}
-    .soc-btns {width: 222px;height: 48px;margin: 0 auto 50px auto;}
+    .soc-btns {width: 100%;height: 48px;margin: 0 auto 50px auto;display: flex;justify-content: center;}
     .soc-btns .ya-share2__badge{padding: 10px;margin: 0 13px;}
     .ya-share2__container_size_m .ya-share2__icon {height: 24px;width: 24px;}
     .logo-dogchow{width: 163px;height: 54px;margin: 46px 0 0 50px;}
@@ -1022,7 +1022,7 @@ blockquote.gray:before{top:-24px;}
     .slider-white-item {padding: 0% 12%;min-height: 38.906vw;flex-direction: column;} 
     .slider-white-item h5 {font-size: 5.625vw;margin: 5.938vw 0 2.813vw 0;} 
     .slider-white-item p{font-size: 3.750vw;line-height: 4.531vw;max-width: 100%;} 
-    .slider-white-item .text-wrap{width: 100%;} .slider-white-item .img-wrap{padding: 0 25%;width:100%;} 
+    .slider-white-item .text-wrap{width: 100%;} .slider-white-item .img-wrap{padding: 0 25%;width:100%;transform: none !important;} 
     .slider-white .owl-nav .owl-next{right: 3.594vw;top: 20.781vw;width: 5.781vw;height: 5.938vw;} 
     .slider-white .owl-nav .owl-prev{left: 3.594vw;top: 20.781vw;width: 5.781vw;height: 5.938vw;} 
     .slider-white .owl-nav .owl-next{background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 51 51'%3E%3Cpath fill='%23000' d='M49.7 23.6L3.1.2a2.1 2.1 0 00-2.8 3l14.2 22.3L.3 47.6a2.1 2.1 0 002.8 3l46.6-23.3a2.1 2.1 0 000-3.7z'/%3E%3C/svg%3E");}
